--- a/bower.json
+++ b/bower.json
@@ -25,11 +25,16 @@
 		"tests"
 	],
 	"dependencies": {
+    "polymer": "Polymer/polymer#2.0-preview",
+    "iron-icon": "PolymerElements/iron-icon#2.0-preview",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
+    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
+		"iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview"
 	},
 	"devDependencies": {
-		"iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
-		"iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
-		"web-component-tester": "^4.0.0",
-		"webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
+		"web-component-tester": "^4.0.0"
+	},
+	"resolutions": {
+		"webcomponentsjs": "v1"
 	}
 }
