--- a/bower.json
+++ b/bower.json
@@ -25,11 +25,18 @@
 		"tests"
 	],
 	"dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview",
-    "iron-icon": "PolymerElements/iron-icon#2.0-preview",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
-    "iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
-		"iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview"
+		"polymer": "Polymer/polymer#2.0-preview",
+		"iron-component-page": "PolymerElements/iron-component-page#2.0-preview",
+		"iron-demo-helpers": "PolymerElements/iron-demo-helpers#2.0-preview",
+		"app-layout": "PolymerElements/app-layout#2.0-preview",
+		"app-route": "PolymerElements/app-route#2.0-preview",
+		"iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
+		"iron-icon": "PolymerElements/iron-icon#2.0-preview",
+		"iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
+		"iron-media-query": "PolymerElements/iron-media-query#2.0-preview",
+		"iron-pages": "PolymerElements/iron-pages#2.0-preview",
+		"iron-selector": "PolymerElements/iron-selector#2.0-preview",
+		"paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview"
 	},
 	"devDependencies": {
 		"web-component-tester": "^4.0.0"
